fix: fix bug with overflow vision of filter bar on the phone devices

--- a/src/App.styles.css
+++ b/src/App.styles.css
@@ -16,6 +16,7 @@
   --basic-orange-pixema: #f3a608;
   --width-content-container: 1490px;
   --text-color: #ffffff;
+  overflow-x: hidden;
 }
 
 :root.dark {
