--- a/src/features/Card/Card.module.scss
+++ b/src/features/Card/Card.module.scss
@@ -7,8 +7,9 @@
 .container {
   display: flex;
   flex-flow: column;
-  max-width: 265px;
   flex: 1 1 20%;
+  min-width: 150px;
+  max-width: 300px;
   div:first-child {
     img {
       height: 358px;
@@ -23,6 +24,15 @@
     &:hover {
       text-decoration: none;
       color: var(--primary-purple-second);
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .wrapper {
+    justify-content: center;
+    .container {
+      flex: 1 1 45%;
     }
   }
 }
