--- a/src/features/Card/CertainCard/CertainCard.module.scss
+++ b/src/features/Card/CertainCard/CertainCard.module.scss
@@ -7,8 +7,8 @@
   .containerImg {
     display: flex;
     flex-flow: column;
-    max-width: 265px;
-    flex: 1 1 25%;
+    min-width: 150px;
+    flex: 1 1 30%;
 
     img {
       height: 358px;
@@ -75,6 +75,24 @@
       color: var(--text-color);
       display: flex;
       justify-content: flex-start;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .wrapper {
+    gap: 20px;
+    flex-flow: column;
+    align-items: center;
+    justify-content: stretch;
+    .containerImg {
+      flex: 1 1 40%;
+    }
+    .containerDiscription {
+      flex: 1 1 50%;
+    }
+    .shorts div {
+      width: 100%;
     }
   }
 }
