--- a/src/shared/Menu/Menu.module.scss
+++ b/src/shared/Menu/Menu.module.scss
@@ -32,6 +32,10 @@
   display: none;
   transition: ease-in-out 300ms;
   transform: translateX(110%);
+  background: var(--bg-black-pixema);
+  padding: 0px 0px 20px 20px;
+  border-bottom-left-radius: 10px;
+  width: 150px;
   &[data-open='false'] {
     transform: translateX(0);
   }
